@@ -384,6 +384,20 @@ just passed through.
 ====
 
 
+do_hostchecks::
+Set this to 'no' if you want Mod-Gearman to only take care about
+servicechecks. No hostchecks will be processed by Mod-Gearman. Use
+this option to disable hostchecks and still have the possibility to
+use hostgroups for easy configuration of your services.
+If set to yes, you still have to define which hostchecks should be
+processed by either using 'hosts' or the 'hostgroups' option.
+Default: `yes`
++
+====
+    do_hostchecks=yes
+====
+
+
 result_workers::
 Number of result worker threads. Usually one is enough. You may increase the
 value if your result queue is not processed fast enough.
