@@ -1,6 +1,7 @@
 This file documents the revision history for mod_gearman.
 
 1.0.2  Fri Mar 11 10:30:21 CET 2011
+          - added new option do_hostchecks to completly disable hostchecks
           - fixed reading keyfiles
 
 1.0.1  Sat Mar  5 15:47:22 CET 2011
